--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ dependencies:
   animated_notch_bottom_bar:
   webview_flutter:
   webview_flutter_android:
-  fl_chart: ^0.70.2
+  fl_chart:
   print_bluetooth_thermal:
   mobile_scanner:
   excel:
@@ -130,13 +130,13 @@ flutter:
 flutter_intl:
   enabled: true
 
-
-icons_launcher:
-  image_path: "images/appIcon.png"
-  platforms:
-    android:
-      enable: true
-
-    ios:
-      enable: true
-      image_path: "images/appIcon.png"
+#
+#icons_launcher:
+#  image_path: "images/Gemini_Generated_Image.png"
+#  platforms:
+#    android:
+#      enable: true
+#
+#    ios:
+#      enable: true
+#      image_path: "images/Gemini_Generated_Image.png"
