--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.10+11
+version: 1.0.11+12
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -86,6 +86,7 @@ dependencies:
 #  pdf_render: ^1.4.12
   barcode:
   screenshot:
+  in_app_update:
 
 dev_dependencies:
   flutter_test:
